Finished all parts of the assessment

--- a/profile.html
+++ b/profile.html
@@ -13,9 +13,10 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
+            <li class="crumb"><a href="./myNeighborhood.html">My neighborhood</a></li>
 	    </ol>
 	</nav>
-<header class="header">Vadzim Yesman - future developer</header>
+<header class="header">Vadzim Yesman - future web-developer</header>
 <p>Hi everyone! My name is Vadzim Yesman and I am a Devmountain student at the moment. Hopefully soon enough I will become a real web-developer.</p>
 
 <h1>My skills are:</h1>
@@ -36,7 +37,7 @@
         <li>Make a solid project wich will make me feel proud</li>
         <li>Enjoy what I am doing every day</li>    
     </ul>
-   <p class="text">If you want more obout me, please click on any of my favourites below:</p> 
+   <p class="text">If you want to learn more obout me, please click on any of my favourites below:</p> 
     <button id="place" class="yellowLarge">My Favorite Place</button>
     <button id="ritual" class="yellowLarge">My Favorite Ritual</button>
     <button id="color" class="yellowLarge">My Favorite Color</button>
@@ -44,7 +45,7 @@
     <section class="spacing"></section>
 
     <fieldset class="fieldForm">
-        <p>How did you find us?</p>
+        <p>Where did you find my profile?</p>
         <div>
           <input type="checkbox">
           <label for="Google">Google</label>
@@ -58,8 +59,8 @@
             <label for="music">Other</label>
           </div>
     </fieldset>
-
-<footer class="footer">Thanks for checking my profile page!</footer>
+    <section class="spacing"></section>
+<footer class="footer">Thanks for checking out my profile page!</footer>
 <script src="profile.js" ></script>   
 </body>
 </html>
