--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
+			<li class="crumb"><a href="./myNeighborhood.html">My my neighborhood</a></li>
 	    </ol>
 	</nav>
 
